--- a/index.html
+++ b/index.html
@@ -1,5 +1,54 @@
 <html>
+  <head>
+    <script type="module" src="./index.js"></script>
+  </head>
   <body>
-    <h1>Hi there</h1>
+    <style>
+      body { 
+        padding: 0;
+        margin: 0; 
+      }
+      #root { 
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #333;
+      }
+      #game { 
+        height: 352px; 
+        width: 352px; 
+        background: #fff; 
+        overflow: hidden;
+        position: relative;
+      }
+      .grid { position: absolute; z-index: 100; width: 100%; height: 100%; top: 0; left: 0 }
+      .grid-r { position: absolute; width: 100%; height: 1px; background: #ff0000; }
+      .grid-r-1 { top: calc(32px * 1); left: 0; }
+      .grid-r-2 { top: calc(32px * 2); left: 0; }
+      .grid-r-3 { top: calc(32px * 3); left: 0; }
+      .grid-r-4 { top: calc(32px * 4); left: 0; }
+      .grid-r-5 { top: calc(32px * 5); left: 0; }
+      .grid-r-6 { top: calc(32px * 6); left: 0; }
+      .grid-r-7 { top: calc(32px * 7); left: 0; }
+      .grid-r-8 { top: calc(32px * 8); left: 0; }
+      .grid-r-9 { top: calc(32px * 9); left: 0; }
+      .grid-r-10 { top: calc(32px * 10); left: 0; }
+      .grid-c { position: absolute; width: 1px; height: 100%; background: #ff0000; }
+      .grid-c-1 { left: calc(32px * 1); top: 0; }
+      .grid-c-2 { left: calc(32px * 2); top: 0; }
+      .grid-c-3 { left: calc(32px * 3); top: 0; }
+      .grid-c-4 { left: calc(32px * 4); top: 0; }
+      .grid-c-5 { left: calc(32px * 5); top: 0; }
+      .grid-c-6 { left: calc(32px * 6); top: 0; }
+      .grid-c-7 { left: calc(32px * 7); top: 0; }
+      .grid-c-8 { left: calc(32px * 8); top: 0; }
+      .grid-c-9 { left: calc(32px * 9); top: 0; }
+      .grid-c-10 { left: calc(32px * 10); top: 0; }      
+    </style>
+    <div id="root">
+      <div id="game"></div>
+    </div>
   </body>
 </html>
